<resources>
    <string name="app_name">Sudoku</string>
    <string name="game_title">Kotlin Sudoku</string>
    <string name="set_dificulty">Set difficulty</string>
    <string name="custom_dificulty">Custom difficulty</string>
    <string name="start">Start</string>
    <string name="hard">Hard</string>
    <string name="normal">Normal</string>
    <string name="easy">Easy</string>
    <string name="sudoku_completed">Sudoku Completed \n\nTe Amo Mi Bella Flor</string>
    <string name="finish">Finish</string>
    <string name="apply">Apply</string>
    <string name="background_color">BackGround Color</string>
    <string name="text_color">Text Color</string>
    <string name="cell_background">Cell background</string>
    <string name="button_color">Button Color</string>
    <string name="button_text_color">Button text color</string>
    <string name="pertinent_cell_background">Pertinent Cell Background</string>
    <string name="selected_values_text_color">Selected values text color</string>
    <string name="user_inputs_text">User Inputs Text</string>
    <string name="user_inputs_correct_text">User Correct Inputs Text</string>
    <string name="sudoku_border_color">Sudoku Border color</string>
    <string name="cell_border_color">Cell Border Color</string>
    <string name="errors">Errors: %1$d</string>
</resources>